--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,10 +1,9 @@
-
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Micloud.github.com by micloud</title>
+    <title>Opennodes</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
