--- a/wiki/index.html
+++ b/wiki/index.html
@@ -46,5 +46,6 @@
     <script type="text/javascript" src="javascripts/base.js"></script>
     <script type="text/javascript" src="javascripts/marked.js"></script>
     <script type="text/javascript" src="javascripts/jquery.blockUI.js"></script>
+    <script type="text/javascript" src="javascripts/underscore-min.js"></script>
   </body>
 </html>
