--- a/wiki/index.html
+++ b/wiki/index.html
@@ -60,7 +60,7 @@
     <script type="text/javascript" src="javascripts/marked.js"></script>
     <script type="text/javascript" src="javascripts/jquery.blockUI.js"></script>
     <script type="text/javascript" src="javascripts/underscore-min.js"></script>
-    <script type="text/javascript" src="javascripts/menu.js"></script>
+    <script type="text/javascript" src="javascripts/menu.js?t=1"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
