--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div style="width:100%;height:100%;text-align:center;vertical-align:middle">
-      <script>document.location="http://peihsinsu.github.io/opennodes/"</script>
+      <script>document.location="http://opennodes.github.io/"</script>
       <p>
         Build using <a href="">marked.js</a>, host only <a href-"https://github.com">Github</a>
       </p>
