--- a/wiki/index.html
+++ b/wiki/index.html
@@ -11,7 +11,10 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script>document.location='http://opennodes.github.io/'</script>
+    <script>
+      alert('我們搬家了～搬到：http://opennodes.github.io');
+      document.location='http://opennodes.github.io/'  
+    </script>
   </head>
   <body>
     <div class="wrapper">
